--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,4 +27,4 @@ jobs:
         
         - name: Run tests
           run: |
-            PYTHONPATH=. pytest
+            PYTHONPATH=. pytest --cov=app --cov-report=term-missing
