--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -27,7 +27,7 @@ jobs:
             context: .
             push: true
             tags: carpearto/bookstore-api:latest
-            platform: linux/amd64, linux/arm64
+            platforms: linux/amd64, linux/arm64
 
     
             
